[package]
name = "xtensa-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }

paste = "1"

[target.xtensa-esp32s2-none-elf.dependencies]
esp-println = { version = "0.12", default-features = false, features = ["uart", "esp32s2"] }
esp-hal = { version = "0.21", features = ["esp32s2"] }
xtensa-lx-rt = { version = "0.17", features = ["esp32s2"] }
spin = { version = "0.9", features = ["portable_atomic"] } # used in xtensa-lx-rt

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
[lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920

[profile.dev]
opt-level = 'z'

[profile.release]
opt-level = 'z'

[patch.crates-io]
portable-atomic = { path = "../.." } # used in xtensa-lx-rt via spin
