[package]
name = "xtensa-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }

paste = "1"

[target.xtensa-esp32s2-none-elf.dependencies]
esp-println = { version = "0.13", default-features = false, features = ["uart", "esp32s2"] }
esp-hal = { git = "https://github.com/taiki-e/esp-hal.git", branch = "dev", features = ["esp32s2"] }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
[lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920

[profile.dev]
opt-level = 'z'

[profile.release]
opt-level = 'z'

[patch.crates-io]
portable-atomic = { path = "../.." } # used in esp-hal
