[package]
name = "portable-atomic-internal-codegen"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
bindgen = { default-features = false, features = ["prettyplease", "runtime"], git = "https://github.com/taiki-e/rust-bindgen.git", branch = "dev" } # https://github.com/rust-lang/rust-bindgen/pull/2369 + avoid https://github.com/rust-lang/cargo/issues/10623 + avoid bug on generate c str option
camino = "1"
duct = { git = "https://github.com/taiki-e/duct.rs.git", branch = "dev" } # drop once_cell that may cause https://github.com/rust-lang/cargo/issues/10623
fs-err = "2"
globset = "=0.4.9" # globset 0.4.10 depends on bstr 1 which may cause https://github.com/rust-lang/cargo/issues/10623
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
regex = "~1.7" # regex 1.8 may cause https://github.com/rust-lang/cargo/issues/10623
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
target-spec-json = "0.1.3"
