[package]
name = "portable-atomic-internal-codegen"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
bindgen = { default-features = false, features = ["prettyplease", "runtime"], git = "https://github.com/taiki-e/rust-bindgen.git", branch = "dev" } # https://github.com/rust-lang/rust-bindgen/pull/2369 + avoid https://github.com/rust-lang/cargo/issues/10623 + avoid bug on generate c str option
camino = "1"
duct = "0.13"
fs-err = "2"
globset = { version = "0.4", default-features = false }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
regex = { version = "1", default-features = false, features = ["std"] }
syn = { version = "2", default-features = false, features = ["parsing", "printing", "full"] }
target-spec-json = "0.1"

[lints]
workspace = true
